--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -14,7 +14,7 @@ services:
             - "6379:6379"
 
     eq-questionnaire-launcher:
-        image: onsdigital/eq-questionnaire-launcher:latest
+        image: europe-west2-docker.pkg.dev/ons-eq-ci/docker-images/eq-questionnaire-launcher:latest
         environment:
             SURVEY_RUNNER_URL: http://localhost:5000
             SURVEY_RUNNER_SCHEMA_URL: http://host.docker.internal:5000
@@ -27,7 +27,7 @@ services:
             - "8000:8000"
 
     sds:
-        image: onsdigital/eq-runner-mock-sds:latest
+        image: europe-west2-docker.pkg.dev/ons-eq-ci/docker-images/sds:latest
         networks:
             - eq-env
         restart: always
@@ -35,7 +35,7 @@ services:
             - "5003:5003"
 
     cir:
-        image: onsdigital/eq-runner-mock-cir:latest
+        image: europe-west2-docker.pkg.dev/ons-eq-ci/docker-images/cir:latest
         networks:
             - eq-env
         restart: always
