--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
             - eq-env
 
     eq-questionnaire-runner:
-        image: onsdigital/eq-questionnaire-runner:latest
+        image: europe-west2-docker.pkg.dev/ons-eq-ci/docker-images/eq-questionnaire-runner:latest
         build: ./
         env_file:
             - ${RUNNER_ENV_FILE}
@@ -30,7 +30,7 @@ services:
             - "5000:5000"
 
     eq-questionnaire-launcher:
-        image: onsdigital/eq-questionnaire-launcher:latest
+        image: europe-west2-docker.pkg.dev/ons-eq-ci/docker-images/eq-questionnaire-launcher:latest
         environment:
             SURVEY_RUNNER_URL: http://localhost:5000
             SURVEY_RUNNER_SCHEMA_URL: http://eq-questionnaire-runner:5000
@@ -44,7 +44,7 @@ services:
             - "8000:8000"
 
     sds:
-        image: onsdigital/eq-runner-mock-sds:latest
+        image: europe-west2-docker.pkg.dev/ons-eq-ci/docker-images/sds:latest
         networks:
             - eq-env
         restart: always
@@ -52,7 +52,7 @@ services:
             - "5003:5003"
 
     cir:
-        image: onsdigital/eq-runner-mock-cir:latest
+        image: europe-west2-docker.pkg.dev/ons-eq-ci/docker-images/cir:latest
         networks:
             - eq-env
         restart: always
