--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -26,14 +26,20 @@ jobs:
         with:
           version: 2.1.2
           virtualenvs-create: true
-      - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
+          virtualenvs-in-project: false
+          virtualenvs-path: ~/.virtualenvs
+      - name: Cache Poetry virtualenv
+        uses: actions/cache@1bd1e32a3bdc45362d1e726936510720a7c30a57 # v4.2.0
+        id: cache-virtualenv
         with:
-          python-version: 3.13
-          cache: 'poetry'
+          path: ~/.virtualenvs
+          key: ${{ runner.os }}-${{ env.PYTHON_VERSION }}-virtualenvs-${{ hashFiles('poetry.lock') }}
       - name: Install virtual environment
+        if: steps.cache-virtualenv.outputs.cache-hit != 'true'
         run: |
-          sudo apt-get install libsnappy-dev
-          poetry install
+            sudo apt-get install libsnappy-dev
+            poetry install
+
   node-dependencies:
     permissions:
       contents: 'read'
