figure out which env it's actually using

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Install virtual environment
         run: |
           sudo apt-get install libsnappy-dev
+
+          poetry run python --version
+            
           poetry install
   node-dependencies:
     permissions:
