--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -102,6 +102,10 @@ jobs:
         with:
           version: 2.1.2
           virtualenvs-create: true
+      - name: Install virtual environment
+        run: |
+          sudo apt-get install libsnappy-dev
+          poetry install
       - name: Install apt dependencies
         run: |
             sudo apt-get install libsnappy-dev libgconf-2-4 jq
@@ -167,6 +171,10 @@ jobs:
         with:
           version: 2.1.2
           virtualenvs-create: true
+      - name: Install virtual environment
+        run: |
+          sudo apt-get install libsnappy-dev
+          poetry install
       - name: Install npm deps
         run: npm install
       - name: Docker compose
