--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -67,9 +67,7 @@ jobs:
           version: 2.1.2
           virtualenvs-create: true
       - name: Install virtual environment
-        run: |
-          sudo apt-get install libsnappy-dev
-          poetry install
+        run: poetry install
       - name: Compile translations
         run: make translate
       - name: Running translation tests
