--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -101,9 +101,7 @@ jobs:
           version: 2.1.2
           virtualenvs-create: true
       - name: Install virtual environment
-        run: |
-          sudo apt-get install libsnappy-dev
-          poetry install
+        run: poetry install
       - name: Install apt dependencies
         run: |
             sudo apt-get install libsnappy-dev libgconf-2-4 jq
@@ -170,9 +168,7 @@ jobs:
           version: 2.1.2
           virtualenvs-create: true
       - name: Install virtual environment
-        run: |
-          sudo apt-get install libsnappy-dev
-          poetry install
+        run: poetry install
       - name: Install npm deps
         run: npm install
       - name: Docker compose
