--- a/package.json
+++ b/package.json
@@ -33,6 +33,13 @@
         "@wdio/local-runner": "^8.14.3",
         "@wdio/mocha-framework": "^9.1.3",
         "@wdio/spec-reporter": "^9.1.3",
+        "ansi-regex": "5.0.1",
+        "ansi-styles": "3.2.1",
+        "chalk": "2.4.2",
+        "color-convert": "1.9.3",
+        "color-name": "1.1.4",
+        "debug": "4.4.1",
+        "error-ex": "1.3.2",
         "eslint": "^v8.57.1",
         "eslint-cli": "^1.1.1",
         "eslint-config-standard": "^17.1.0",
@@ -41,15 +48,19 @@
         "eslint-plugin-n": "^16.6.2",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^6.6.0",
+        "is-arrayish": "0.2.1",
         "json-web-key": "^0.4.0",
         "jsrsasign": "^11.0.0",
         "livereload": "^0.9.3",
         "node-forge": "^1.3.1",
         "node-jose": "^2.2.0",
         "prettier": "^3.3.3",
+        "strip-ansi": "7.1.0",
+        "supports-color": "5.5.0",
         "typescript": "^5.6.3",
         "uuid": "^11.0.2",
-        "webdriverio": "^9.2.1"
+        "webdriverio": "^9.2.1",
+        "wrap-ansi": "6.2.0"
     },
     "prettier": {}
 }
