--- a/package.json
+++ b/package.json
@@ -63,7 +63,58 @@
         "error-ex": "1.3.2",
         "strip-ansi": "7.1.0",
         "supports-color": "5.5.0",
-        "is-arrayish": "0.2.1"
+        "is-arrayish": "0.2.1",
+        "eslint": {
+            "chalk": "4.1.2"
+        },
+        "jest-matcher-utils": {
+            "chalk": "4.1.2"
+        },
+        "jest-message-util": {
+            "chalk": "4.1.2"
+        },
+        "jest-util": {
+            "chalk": "4.1.2"
+        },
+        "jest-diff": {
+            "chalk": "4.1.2"
+        },
+        "@jest/types": {
+            "chalk": "4.1.2"
+        },
+        "pretty-format": {
+            "ansi-styles": "5.2.0"
+        },
+        "wrap-ansi-cjs": {
+            "ansi-styles": "4.3.0"
+        },
+        "@wdio/cli": {
+            "chalk": "5.4.1"
+        },
+        "@wdio/spec-reporter": {
+            "chalk": "5.3.0"
+        },
+        "@wdio/logger": {
+            "chalk": "5.3.0"
+        },
+        "create-wdio": {
+            "chalk": "5.4.1"
+        },
+        "wait-port": {
+            "chalk": "4.1.2"
+        },
+        "log-symbols": {
+            "chalk": "4.1.2"
+        },
+        "jake": {
+            "chalk": "4.1.2"
+        },
+        "mocha": {
+            "supports-color": "8.1.1"
+        },
+        "strip-ansi": {
+            "ansi-regex": "6.1.0"
+        }
     },
     "prettier": {}
 }
