--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
 
     },
     "overrides": {
-        "wrap-ansi": "6.2.0",
+        "wrap-ansi": "7.0.0",
         "ansi-regex": "5.0.1",
         "ansi-styles": "3.2.1",
         "chalk": "2.4.2",
@@ -66,6 +66,9 @@
         "is-arrayish": "0.2.1",
         "eslint": {
             "chalk": "4.1.2"
+        },
+        "@isaacs/cliui": {
+            "wrap-ansi": "8.1.0"
         },
         "jest-matcher-utils": {
             "chalk": "4.1.2"
