--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
         "@wdio/local-runner": "8.45.0",
         "@wdio/mocha-framework": "9.18.0",
         "@wdio/spec-reporter": "9.18.0",
-        "eslint": "v8.57.1",
+        "eslint": "8.57.1",
         "eslint-cli": "1.1.1",
         "eslint-config-standard": "17.1.0",
         "eslint-plugin-import": "2.32.0",
