--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -173,17 +173,25 @@ jobs:
         run: npm install
       - name: Docker compose
         run: docker compose --version && RUNNER_ENV_FILE=.functional-tests.env docker compose up --build -d
-      - name: Wait for SDS (and datasets) from inside runner
+      - name: Wait for SDS (and datasets)
+        env:
+          RUNNER_ENV_FILE: .functional-tests.env
+        shell: bash
         run: |
           set -euo pipefail
-          # Wait for SDS health
+
           for i in {1..120}; do
-            if docker compose exec -T eq-questionnaire-runner curl -fsS http://sds:5003/health >/dev/null 2>&1; then
-              break; fi; sleep 1
+            if curl -fsS http://localhost:5003/health >/dev/null 2>&1; then
+              echo "SDS ready"
+              break
+            fi
+            sleep 1
           done
 
-          docker compose exec -T eq-questionnaire-runner curl -fsS http://sds:5003/datasets/203b2f9d-c500-8175-98db-86ffcfdccfa3 >/dev/null
-          docker compose exec -T eq-questionnaire-runner curl -fsS http://sds:5003/datasets/3bb41d29-4daa-9520-82f0-cae365f390c6   >/dev/null
+          curl -fsS http://localhost:5003/datasets/203b2f9d-c500-8175-98db-86ffcfdccfa3 >/dev/null
+          curl -fsS http://localhost:5003/datasets/3bb41d29-4daa-9520-82f0-cae365f390c6   >/dev/null
+
+
       - name: Functional tests
         run: make test-functional
       - name: Docker compose shutdown
