add hub and spoke to the tests

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -175,6 +175,7 @@ jobs:
         run: docker compose --version && RUNNER_ENV_FILE=.functional-tests.env docker compose up --build -d
       - name: Functional tests
         run: |
+          make test-functional-spec SPEC=hub_and_spoke/hub_and_spoke_supplementary_data.spec.js
           make test-functional-spec SPEC=supplementary_data/supplementary_data_test.spec.js                                
           make test-functional-spec SPEC=supplementary_data/supplementary_data_calculated_question_and_interstitial.spec.js
           make test-functional-spec SPEC=supplementary_data/supplementary_data_calculated_summary_and_repeating_block.spec.js
