--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -173,23 +173,8 @@ jobs:
         run: npm install
       - name: Docker compose
         run: docker compose --version && RUNNER_ENV_FILE=.functional-tests.env docker compose up --build -d
-
-      - name: Hub & Spoke SDS spec
-        run: make test-functional-spec SPEC=hub_and_spoke/hub_and_spoke_supplementary_data.spec.js
-        continue-on-error: true
-
-      - name: SDS basic supplementary data SPEC
-        run: make test-functional-spec SPEC=supplementary_data/supplementary_data_test.spec.js
-        continue-on-error: true
-
-      - name: SDS calculated question + interstitial
-        run: make test-functional-spec SPEC=supplementary_data/supplementary_data_calculated_question_and_interstitial.spec.js
-        continue-on-error: true
-
-      - name: SDS calculated summary + repeating block
-        run: make test-functional-spec SPEC=supplementary_data/supplementary_data_calculated_summary_and_repeating_block.spec.js
-        continue-on-error: true
-
+      - name: Functional tests
+        run: make test-functional
       - name: Docker compose shutdown
         run: RUNNER_ENV_FILE=.functional-tests.env docker compose kill
   docker-push:
