--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -88,6 +88,8 @@ jobs:
       contents: 'read'
     needs: python-dependencies
     runs-on: ubuntu-22.04
+    env:
+      CI: True
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
       - run: |
